--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="/docs" class='btn inverse'><i class="fa-solid fa-rocket"></i> Get started</a>
     <a href="https://discord.gg/BZtp5F6QQM" class='btn'><i class="fa-brands fa-discord"></i> Discord</a>
     <a href="https://twitter.com/skogard" class='btn'><i class="fa-brands fa-twitter"></i> Twitter</a>
-    <a href="https://github.com/cell-org" class='btn'><i class="fa-brands fa-github"></i> GitHub</a>
+    <a href="https://github.com/privatepart" class='btn'><i class="fa-brands fa-github"></i> GitHub</a>
   </header>
   <main>
     <img src="/code.png">
