meta tag update

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Privateparty" />
 <meta name="twitter:description" content="Dead simple blockchain auth framework" />
-<meta name="twitter:image" content="https://privateparty.papercorp.org/preview.jpeg" />
-<meta property="og:url" content="https://privateparty.papercorp.org" />
+<meta name="twitter:image" content="https://privateparty.dev/preview.jpeg" />
+<meta property="og:url" content="https://privateparty.dev" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Privateparty" />
 <meta property="og:description" content="Dead simple blockchain auth framework" />
-<meta property="og:image" content="https://privateparty.papercorp.org/preview.jpeg" />
+<meta property="og:image" content="https://privateparty.dev/preview.jpeg" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 <link href="/style.css" rel="stylesheet">
 </head>
